--- a/style.css
+++ b/style.css
@@ -131,7 +131,7 @@ h4 {
     line-height: 40px;
     text-align: center;
     color: #FFFFFF;
-    margin-top: 54px;
+    margin-top: 50px;
     margin-bottom: 20px;
 }
 .skill__text_card {
@@ -408,5 +408,72 @@ footer {
 } */
 
 @media (max-width: 768px) {
+    .nav__link {
+        margin-left: 15px;
+        font-weight: 200;
+        font-size: 14px;
+        line-height: 25px;
+    }
+    .heading {
+        font-weight: 400;
+        font-size: 32px;
+        line-height: 64px;
+    }
+    .hero {
+        padding-left: 55px;
+        margin-top: 103px;
+    }
+    .hero__text {
+        width: 390px;
+        font-weight: 400;
+        font-size: 20px;
+        line-height: 24px;   
+        margin-bottom: 60px; 
+    }
+    .top {
+        width: 100%;
+        height: 590px;
+        background-image: url(img/bg_tablet.png);
+    }
+    .skill__card__box {
+        margin-top: 69px;
+        flex-wrap: wrap;
+    }
+    .card3 , .card4 {
+        padding-top: 75px;
+    }
+    h4 {
+        margin-top: 29px;
+        margin-bottom: 20px;
+    }
 
+
+
+    .portfolio__photo_album {
+        display: flex;
+        flex-direction: column;
+        width: 65%;
+    }
+    .port_img {
+        margin: 20px;
+    }
+    .price__box {
+        flex-direction: column;
+    }
+    .price__card {
+        margin-bottom: 30px;
+    }
+    .contacts {
+        margin-top: 100px;
+        height: 600px;
+        background-image: url(img/bg_tablet_contacts.png);
+    }
+    .contact__send_form {
+        float: right;
+        padding-right: 159px;
+    } 
+    .copyrigh {
+        display: none;
+        text-align: center;
+    }
 }
